landingpage, responsive navbar

--- a/readme/templates/readme/landing.html
+++ b/readme/templates/readme/landing.html
@@ -1,8 +1,195 @@
 {% extends 'base.html' %}
-
+{% load static %}
+{% block navbar %}
+<nav class="container flex justify-between items-center">
+    <img src="{% static 'img/logo.svg' %}" alt="logo" class="hidden sm:block">
+    <img src="{% static 'img/logo-small.svg' %}" alt="logo" class="w-14 sm:hidden">
+    <a href="{% url 'login' %}" class="text-white bg-[#1E1915] py-1.5 px-4 font-bold block rounded-full">Login</a>
+</nav>
+{% endblock navbar %}
 
 {% block content %}
-<div class="flex justify-center items-center min-h-screen text-5xl font-bold">
-    <h1>This is landing page! Still in progress!</h1>
+<div class="flex flex-col gap-10 sm:gap-28 font-Merriweather pb-32">
+    <header class="container py-10">
+        <div
+            class="max-w-screen-lg w-full mx-auto flex flex-col sm:flex-row text-center sm:text-left justify-between items-center">
+            <h1 class="font-medium text-xl sm:text-3xl lg:text-4xl xl:text-5xl">Buka wawasan barumu <br
+                    class="hidden md:block">
+                melalui buku <span class="text-[#5A4100]">disini.</span></h1>
+            <div class="w-full max-w-[24rem] aspect-1"><img src="{% static 'readme/img/landing-header.png' %}"
+                    alt="header image" class="w-full h-full object-contain"></div>
+        </div>
+    </header>
+    <section class="px-4">
+        <div
+            class="bg-[#ffeee7] text-center container rounded-3xl  flex py-10 flex-col mx-auto w-full drop-shadow-xl max-w-screen-lg items-center">
+            <h2 class="font-medium text-lg sm:text-2xl md:text-3xl lg:text-4xl">Temukan buku favoritmu!</h2>
+            <span class="font-Lato text-xs sm:text-sm md:text-base">Cari dan tambahkan ke <span
+                    class="italic">wishlist</span> buku yang ingin
+                anda
+                baca.</span>
+            <div
+                class="py-6 sm:py-10 px-2 sm:px-10 w-full grid grid-cols-2 sm:grid-cols-4 justify-items-center gap-3 md:gap-5 lg:gap-10 justify-between">
+                <div class="bg-white rounded-md w-full aspect-[3/5]"><img
+                        src="{% static 'readme/img/book-cover-sample-1.jpg' %}" class="w-full h-full object-cover"
+                        alt="sample-cover-1">
+                </div>
+                <div class="bg-white rounded-md w-full aspect-[3/5]"><img
+                        src="{% static 'readme/img/book-cover-sample-2.jpg' %}" class="w-full h-full object-cover"
+                        alt="sample-cover-2">
+                </div>
+                <div class="bg-white rounded-md w-full aspect-[3/5]"><img
+                        src="{% static 'readme/img/book-cover-sample-3.jpg' %}" class="w-full h-full object-cover"
+                        alt="sample-cover-3">
+                </div>
+                <div class="bg-white rounded-md w-full aspect-[3/5]"><img
+                        src="{% static 'readme/img/book-cover-sample-4.jpg' %}" class="w-full h-full object-cover"
+                        alt="sample-cover-4">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section
+        class="flex flex-col md:flex-row container gap-8 sm:gap-10 md:gap-none lg:gap-14 max-w-screen-lg mx-auto justify-center  items-center">
+        <div class="flex max-w-sm md:max-w-none flex-col w-full text-center md:text-left md:w-2/5 gap-2">
+            <h2 class="font-medium text-lg  md:text-3xl lg:text-4xl">Bagikan postingan keteman anda!</h2>
+            <span class="font-Lato text-xs sm:text-sm md:text-base">Buat dan bagikan postingan lalu kumpulkan like
+                sebanyak-banyaknya untuk
+                mendapatkan
+                loyalty point!</span>
+        </div>
+        <div class="w-fit lg:w-3/5">
+            <div
+                class="flex max-w-xs mx-auto lg:max-w-none bg-white w-full flex-col items-center lg:flex-row justify-between px-4 py-4 gap-4 md:gap-16 border ">
+                <div class="flex flex-col gap-3">
+                    <div class="flex gap-3 items-center">
+                        <img src="{% static 'img/profile.svg' %}" alt="">
+                        <div class="flex flex-col">
+                            <div class="flex gap-1 text-sm md:text-base">
+                                <span>Pek Bepe</span>
+                                <span>@pakbepe</span>
+                            </div>
+                            <span class="text-xs md:text-sm">Seorang mahasiswa dari UI</span>
+                        </div>
+                    </div>
+                    <div class="flex flex-col gap-2 text-sm md:text-base justify-between h-full">
+                        <span>Ini adalah buku terbaik yang pernah saya baca! Kalian harus membaca buku ini sekarang
+                            juga!</span>
+                        <span>1:01 AM · 1 Oct 2023</span>
+                    </div>
+                </div>
+                <a href="{% url 'books' %}" class="flex flex-col items-center w-full md:w-fit gap-1">
+                    <div class="w-full lg:w-32">
+                        <img src="{% static 'readme/img/book-cover-post.jpg' %}" alt="Gambar buku"
+                            class="border mx-auto">
+                    </div>
+                    <span class="text-center text-xs text-black/70">Ayah (2015)</span>
+                </a>
+            </div>
+
+        </div>
+    </section>
+    <section class="flex container  flex-col bg-[#ffeee7] py-10 items-center gap-4">
+        <div class="text-center">
+            <h2 class="font-medium text-lg sm:text-2xl md:text-3xl lg:text-4xl">Berikan review buku.</h2>
+            <span class="font-Lato text-center text-xs sm:text-sm md:text-base">Bagikan pengalaman anda mengenai buku
+                yang anda baca!</span>
+        </div>
+        <div class="flex gap-5 flex-col lg:flex-row">
+            <div class="flex flex-col bg-white rounded-lg w-full justify-between px-4 py-4 gap-3 border ">
+                <div class="flex items-center gap-2">
+                    <div class="w-16 aspect-[3/5]"><img class="w-full h-full object-cover"
+                            src="{% static 'readme/img/book-cover-review-1.jpg' %}" alt="cover"></div>
+                    <div class="text-xs sm:text-sm  flex flex-col">
+                        <a href="" class="font-semibold text-base sm:text-lg underline">A Million To One</a>
+                        <span>By Tony Faggioli</span>
+                        <span>28 March 2013</span>
+                    </div>
+                </div>
+                <div class="flex flex-col text-sm sm:text-base justify-between h-full">
+                    <span>Buku yang sangat menarik! Saya suka!</span>
+                </div>
+                <div class="text-xs sm:text-sm ">
+                    <span>Terakhir diupdate Oct 29, 2023 01:49 · </span>
+                    <a class="underline text-[#5A4100]" href="">Edit review</a>
+                    <span> · </span>
+                    <a class="underline text-[#5A4100]" href="{% url 'profile' %}">pakbepe</a>
+                </div>
+            </div>
+            <div class="flex flex-col bg-white rounded-lg w-full justify-between px-4 py-4 gap-3 border ">
+                <div class="flex items-center gap-2">
+                    <div class="w-16 aspect-[3/5]"><img class="w-full h-full object-cover"
+                            src="{% static 'readme/img/book-cover-review-2.jpg' %}" alt="cover"></div>
+                    <div class=" text-sm  flex flex-col">
+                        <a href="" class="font-semibold text-lg underline">Artificial Intelligence</a>
+                        <span>Mike Adams</span>
+                        <span>28 March 2013</span>
+                    </div>
+                </div>
+                <div class="flex flex-col justify-between h-full">
+                    <span>Buku ini sangat cocok untuk para penggemar teknologi seperti saya. Saya sangat
+                        merekomendasikannya</span>
+                </div>
+                <div class="text-sm ">
+                    <span>Terakhir diupdate Oct 29, 2023 01:49 · </span>
+                    <a class="underline text-[#5A4100]" href="">Edit review</a>
+                    <span> · </span>
+                    <a class="underline text-[#5A4100]" href="{% url 'profile' %}">pakbepe</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="flex flex-col container max-w-screen-xl gap-3">
+        <div class="flex flex-col gap-2 text-center items-center">
+            <h2 class="font-medium text-lg sm:text-2xl md:text-3xl lg:text-4xl">Temukan quotes yang menginspirasi!</h2>
+            <span class="font-Lato text-xs sm:text-sm md:text-base">Anda bahkan dapat membuat quote anda sendiri!</span>
+        </div>
+        <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-2">
+            <div
+                class="text-[#5A410095]  text-center px-2 bg-white w-full h-40 flex flex-col justify-center items-center gap-1 border rounded-2xl font-Merriweather">
+                <span>"The greatest glory in living lies not in never falling, but in rising every time we fall."</span>
+                <span class="text-xs italic">-Nelson Mandela</span>
+            </div>
+            <div
+                class="text-[#5A410095]  text-center px-2 bg-white w-full h-40 flex flex-col justify-center items-center gap-1 border rounded-2xl font-Merriweather">
+                <span>"If you set your goals ridiculously high and it's a failure, you will fail above everyone else's
+                    success."</span>
+                <span class="text-xs italic">-James Cameron</span>
+            </div>
+            <div
+                class="text-[#5A410095]  text-center px-2 bg-white w-full h-40 flex flex-col justify-center items-center gap-1 border rounded-2xl font-Merriweather">
+                <span>"If you look at what you have in life, you'll always have more. If you look at what you don't have
+                    in life, you'll never have enough."</span>
+                <span class="text-xs italic">-Oprah Winfrey</span>
+            </div>
+            <div
+                class="text-[#5A410095]  text-center px-2 bg-white w-full h-40 flex flex-col justify-center items-center gap-1 border rounded-2xl font-Merriweather">
+                <span>"You may say I'm a dreamer, but I'm not the only one. I hope someday you'll join us. And the world
+                    will live as one."</span>
+                <span class="text-xs italic">-John Lennon</span>
+            </div>
+        </div>
+    </section>
+    <section class="container px-4">
+        <div
+            class="px-2 sm:px-8 flex flex-col sm:flex-row-reverse bg-[#ffeee7] rounded-3xl py-10 drop-shadow-xl items-center gap-10 max-w-screen-lg mx-auto justify-center">
+            <div class="w-full md:w-fit text-center sm:text-left items-center sm:items-start flex flex-col gap-4 ">
+                <div class="flex flex-col gap-2">
+                    <h2 class="font-medium text-lg sm:text-2xl md:text-3xl lg:text-4xl">Kini tersedia fitur shop!</h2>
+                    <span class="font-Lato w-full max-w-sm  md:max-w-md text-xs sm:text-sm md:text-base">Kumpulkan
+                        dan
+                        gunakan loyalty point untuk
+                        mendapatkan buku impian anda
+                        melalui fitur
+                        shop</span>
+                </div>
+                <a href="{% url 'register' %}"
+                    class="text-white w-fit bg-[#1E1915] py-1.5 px-4 font-bold block rounded-full">Buat
+                    Akun</a>
+            </div>
+            <div class="w-full max-w-xs sm:w-2/5"><img src="{% static 'readme/img/shop.png' %}"
+                    class="w-full h-full object-contain" alt="shop"></div>
+        </div>
+    </section>
 </div>
 {% endblock content %}
