--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,14 +2,40 @@
 
 <nav class="bg-[#FAEFDF] ">
     <div class="container flex items-center justify-between">
-        <a href="{% url 'homepage' %}"><img src="{% static '/img/logo.svg' %}" alt="logo"></a>
-        <div class="flex gap-5">
-            <a href="{% url 'homepage' %}">Home</a>
-            <a href="{% url 'shop' %}">Shop</a>
-            <a href="{% url 'quotes' %}">Quotes</a>
-            <a href="{% url 'books' %}">Books</a>
+        <a href="{% url 'homepage' %}">
+            <img src="{% static '/img/logo.svg' %}" alt="logo" class="hidden sm:block">
+            <img src="{% static 'img/logo-small.svg' %}" alt="logo" class="w-14 sm:hidden">
+        </a>
+        <div class="flex items-center gap-4">
+            <div class="flex items-center gap-1 lg:hidden">
+                <img src="{% static '/img/loyalty-point.svg' %}" alt="loyalty point">
+                <span class=" font-bold text-lg">{{ user.loyalty_point }}</span>
+            </div>
+            <button onclick="showNav()" class="w-7 h-5 flex flex-col justify-between lg:hidden">
+                <hr class="w-full h-1 rounded-full bg-[#1E1915]">
+                <hr class="w-full h-1 rounded-full bg-[#1E1915]">
+                <hr class="w-full h-1 rounded-full bg-[#1E1915]">
+            </button>
         </div>
-        <div class="w-full max-w-sm">
+        <div id="nav"
+            class="lg:flex gap-5 hidden flex flex-col lg:flex-row absolute lg:static lg:w-fit top-14 left-0 w-full bg-[#FAEFDF] items-center">
+            <a class="py-2 w-full text-center" href="{% url 'homepage' %}">Home</a>
+            <a class="py-2 w-full text-center" href="{% url 'shop' %}">Shop</a>
+            <a class="py-2 w-full text-center" href="{% url 'quotes' %}">Quotes</a>
+            <a class="py-2 w-full text-center" href="{% url 'books' %}">Books</a>
+            {% if user.username %}
+            <div class="items-center flex-col w-full flex gap-4 lg:hidden">
+                <a class="py-2 w-full text-center px-4 hover:bg-gray-200 font-bold"
+                    href="{% url 'profile' %}">Profile</a>
+                <a class="py-2 w-full text-center px-4 hover:bg-gray-200 font-bold text-red-400"
+                    href="{% url 'logout' %}">Logout</a>
+            </div>
+            {% else %}
+            <a href="{% url 'login' %}"
+                class="text-white hidden  bg-[#1E1915] py-1.5 px-4 font-bold lg:block rounded-full">Login</a>
+            {% endif %}
+        </div>
+        <div class="w-full max-w-sm hidden lg:block">
             <label for="search" class="relative">
                 <img src="{% static '/img/magnify.svg' %}" alt="Magnify"
                     class="absolute top-1/2 -translate-y-1/2 right-2 pointer-events-none">
@@ -20,7 +46,7 @@
         </div>
 
         {% if user.username %}
-        <div class="flex items-center gap-4">
+        <div class="lg:flex items-center gap-4 hidden">
             <div class="flex items-center gap-1">
                 <img src="{% static '/img/loyalty-point.svg' %}" alt="loyalty point">
                 <span class=" font-bold text-lg">{{ user.loyalty_point }}</span>
@@ -35,15 +61,14 @@
             </div>
         </div>
         {% else %}
-        <a href="{% url 'login' %}" class="text-white bg-[#1E1915] py-1.5 px-4 font-bold block rounded-full">Login</a>
+        <a href="{% url 'login' %}"
+            class="text-white hidden  bg-[#1E1915] py-1.5 px-4 font-bold lg:block rounded-full">Login</a>
         {% endif %}
-
     </div>
 </nav>
 
 <script>
     const profileBtn = document.getElementById('profileBtn');
-    const profile = document.getElementById('profile');
 
     profileBtn.addEventListener('mouseover', () => {
         profile.classList.remove('hidden');
@@ -53,5 +78,10 @@
     profileBtn.addEventListener('mouseleave', () => {
         profile.classList.add('hidden');
         profile.classList.remove('flex');
-    })
+    });
+
+    const nav = document.getElementById('nav');
+    const showNav = () => {
+        nav.classList.toggle('hidden');
+    }
 </script>
