--- a/shop/templates/shop/shop-item-detail.html
+++ b/shop/templates/shop/shop-item-detail.html
@@ -17,22 +17,14 @@
                     {{ item.price }}
                 </div>
             </div>
-            {% if user.is_authenticated %}
-                {% if item not in user.bookshelf.all %}
-                    {% if item.amount == 0 %}
-                    <button class="bg-gray-500 text-white text-center rounded-full w-full py-2" disabled>Out of Stock</button>
-                    {% else %}
-                    <button class="bg-[#fbbd61] hover:bg-[#af8445] text-white text-center rounded-full w-full py-2" onclick="addToCart('{{item.pk}}')">Add To Cart</button>
-                    {% endif %}
-                {% else %}
-                <button class="bg-emerald-600 text-white text-center rounded-full w-full py-2" disabled>Purchased</button>
-                {% endif %}
+            {% if item.amount == 0 %}
+            <button class="bg-gray-500 text-white text-center rounded-full w-full py-2" disabled>Out of Stock</button>
             {% else %}
-                {% if item.amount == 0 %}
-                <button class="bg-gray-500 text-white text-center rounded-full w-full py-2" disabled>Out of Stock</button>
-                {% else %}
-                <button class="bg-[#fbbd61] hover:bg-[#af8445] text-white text-center rounded-full w-full py-2" onclick="addToCart('{{item.pk}}')">Add To Cart</button>
-                {% endif %}
+            <form method="POST">
+                {% csrf_token %}
+                <input placeholder="Amount" class="border-2 py-2 mb-2 text-center justify-center w-full border-[#fbbd61] rounded-full" type="number" name="amount" required="" id="id_amount">
+                <input type="submit" name="submit" value="Add To Cart" class="bg-[#fbbd61] hover:bg-[#af8445] text-white text-center rounded-full w-full py-2 px-4" >
+            </form>
             {% endif %}
         </div>
     </div>
@@ -93,7 +85,7 @@
                 </div>
                 <div class="w-auto items-center py-4 pr-4">
                     <span class="text-lg font-bold">
-                        ${response.ok ? "Book added to cart successfully!" : "Can't add book to cart! Login first!"}
+                        ${response.ok ? "Book added to cart successfully!" : response.status == 400 ? "Not enough item" : "Can't add book to cart! Login first!"}
                     </span>
                 </div>
             </div>`
