--- a/books/templates/books/detail.html
+++ b/books/templates/books/detail.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
-<div class="container flex gap-10 max-w-screen-xl py-6">
-    <div class="w-1/4 flex flex-col gap-4">
+<div class="container flex flex-col md:flex-row gap-10 max-w-screen-xl py-6">
+    <div class="w-full max-w-xs mx-auto md:w-2/5 lg:w-1/4 flex flex-col gap-4">
         <div class="w-full px-10"><img src="{{ book.image_url }}" class="w-full drop-shadow-lg" alt="Cover"></div>
         <div class="flex flex-col items-center gap-2">
             <a href="{% url 'wishlist' %}"
@@ -14,7 +14,7 @@
                 ini</a>
         </div>
     </div>
-    <div class="w-3/4 flex flex-col gap-7">
+    <div class="md:w-3/5 lg:w-3/4 flex flex-col gap-7">
         <div class="flex flex-col gap-3">
             <div class="flex flex-col gap-2">
                 <div class="flex flex-col gap-2">
@@ -59,7 +59,7 @@
                                 <span>{{user.name}}</span>
                                 <span>@{{user.username}}</span>
                             </div>
-                            <span class="text-sm">{{user.biodata}}</span>
+                            <span class="text-sm line-clamp-2">{{user.biodata}}</span>
                         </div>
                     </div>
                 </div>
@@ -116,10 +116,10 @@
                                     <span>${review.user.name}</span>
                                     <span>@${review.user.username}</span>
                                 </div>
-                                <span class="text-sm">${review.user.biodata}</span>
+                                <span class="text-sm line-clamp-2">${review.user.biodata}</span>
                             </div>
                         </div>
-                        <div class="flex items-start gap-2  h-fit">
+                        <div class="items-start gap-2 hidden lg:flex h-fit">
                             ${review.created_at == review.updated_at ? `<span class="text-sm text-black/60">${review.created_at}</span>` : ` <span class="text-sm text-black/60">
                                 Terakhir diedit ${review.updated_at}</span>`}
                             <div class="flex">
@@ -136,6 +136,18 @@
                     <div class="flex flex-col justify-between h-full">
                         <span>${review.content}</span>
                     </div>
+                    <div class="flex items-start gap-2 lg:hidden h-fit">
+                            ${review.created_at == review.updated_at ? `<span class="text-sm text-black/60">${review.created_at}</span>` : ` <span class="text-sm text-black/60">
+                                Terakhir diedit ${review.updated_at}</span>`}
+                            <div class="flex">
+                                ${logginedUserId == review.user.id ? `
+                                    <a href="${editUrl}"><img
+                                        src="{% static 'books/img/pencil.svg' %}" alt="Edit"></a>
+                                    <a href="${deleteUrl}"><img
+                                        src="{% static 'books/img/trash.svg' %}" alt="Delete"></a>` : ''}
+                                
+                            </div>
+                        </div>
                 </div>
                 `;
         }
