--- a/books/templates/books/edit.html
+++ b/books/templates/books/edit.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container max-w-screen-md py-10 flex flex-col gap-5">
+<div class="container min-h-screen max-w-screen-md py-10 flex flex-col gap-5">
     <div class="flex flex-col gap-2">
         <h1 class="font-bold text-3xl">{{ book.title }} (Edit Review)</h1>
         <div class="flex items-center px-2 gap-2">
