--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<nav class="bg-[#FAEFDF] ">
+<nav class="bg-[#FAEFDF] relative z-50 ">
     <div class="container flex items-center justify-between">
         <a href="{% url 'homepage' %}">
             <img src="{% static '/img/logo.svg' %}" alt="logo" class="hidden sm:block">
