fix css, like and dislike in home

--- a/books/templates/books/detail.html
+++ b/books/templates/books/detail.html
@@ -12,6 +12,9 @@
             <a href="{% url 'shop' %}" class="bg-[#003F63] text-white py-2 px-2 w-full rounded-full text-center">Beli
                 Buku
                 ini</a>
+            <a href="{% url 'create-post' book.pk %}"
+                class="bg-[#631e00] text-white py-2 px-2 w-full rounded-full text-center">Buat
+                Postingan</a>
         </div>
     </div>
     <div class="md:w-3/5 lg:w-3/4 flex flex-col gap-7">
