--- a/post/templates/post/edit_post.html
+++ b/post/templates/post/edit_post.html
@@ -1,26 +1,30 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="w-full h-screen text-5xl font-bold flex justify-center items-center">
-    <div class="bg-white p-8 rounded-lg shadow-lg">
-        <div class="w-1/3 mx-auto">
-            <img src="{{ post.book.image_url }}" alt="cover" class="border">
-        </div>
-        <div class="w-2/3 ml-4 mx-auto">
-            <h2 class="text-lg font-semibold text-gray-800">{{ post.book.title }} ({{ post.book.publication_date.year }})</h2>
-            <h2 class="text-3xl font-bold mb-4">Edit Post</h2>
-            <form id="edit-post-form" method="post" data-post-id="{{ post.id }}">
-                {% csrf_token %}
-                <textarea name="content" class="w-full rounded-lg border p-2" rows="4">{{ post.content }}</textarea>
-                <button class="bg-blue-500 text-white rounded px-4 py-2 text-sm hover:bg-blue-600 mx-auto" type="submit">Save Changes</button>
-            </form>
+<div class="w-full h-screen text-5xl font-bold flex px-2 justify-center items-center">
+    <div class="bg-white w-full max-w-screen-md p-8 rounded-lg shadow-lg">
+        <h2 class="text-3xl font-bold mb-4 text-center sm:text-left">Edit Post</h2>
+        <div class="flex flex-col sm:flex-row gap-4">
+            <div class="w-1/3 mx-auto">
+                <img src="{{ post.book.image_url }}" alt="cover" class="border w-full max-w-sm">
+            </div>
+            <div class="w-full sm:w-2/3  mx-auto">
+                <h2 class="text-lg font-semibold text-gray-800 text-center sm:text-left">{{ post.book.title }}
+                    ({{ post.book.publication_date.year }})</h2>
+                <form id="edit-post-form" method="post" data-post-id="{{ post.id }}">
+                    {% csrf_token %}
+                    <textarea name="content" class="w-full rounded-lg border p-2" rows="4">{{ post.content }}</textarea>
+                    <button class=" text-white rounded-full px-4 py-2 text-sm bg-[#5A4100] mx-auto" type="submit">Save
+                        Changes</button>
+                </form>
+            </div>
         </div>
     </div>
 </div>
 
 <script>
-    $(document).ready(function() {
-        $("#edit-post-form").on("submit", function(event) {
+    $(document).ready(function () {
+        $("#edit-post-form").on("submit", function (event) {
             event.preventDefault();
             var postId = $(this).data("post-id");
             var formData = $(this).serialize();
@@ -31,7 +35,7 @@
                 type: 'POST',
                 data: formData,
                 dataType: 'json',
-                success: function(data) {
+                success: function (data) {
                     if (data.success) {
                         alert(data.message);
                     } else {
