--- a/quotes/templates/quotes/index.html
+++ b/quotes/templates/quotes/index.html
@@ -2,91 +2,97 @@
 
 {% block content %}
 <div class="w-full h-screen flex flex-col items-center mt-5">
-    <div class="text-4xl font-bold">Some Quotes to Cheer Up {{name}}'s Day 🥂</div>
+    <div class="text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl font-bold text-center ">Some Quotes to Cheer Up
+        {{name}}'s Day 🥂</div>
     <!-- Munculkan search bar -->
     <div class="mt-3 flex flex-wrap items-center">
         <label for="search" class="relative mr-4 mb-2">
-            <input type="text" id="search" class="h-8 w-96 border-1 border-black/40" placeholder="Cari quotes favoritmu">
+            <input type="text" id="search" class="h-8 w-48 sm:w-96 border-1 border-black/40"
+                placeholder="Cari quotes favoritmu">
         </label>
     </div>
 
     <!-- Tempat buat card -->
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 ml-5 mr-5" id="quote-cards">
         {% for product in quotes %}
-            <div class="max-w-sm bg-orange-100 rounded-lg shadow-lg p-4 mb-4">
-                <h5 class="text-xl font-bold text-center">{{ product.user.username }}</h5>
-                <p class="text-gray-600 font-bold text-center">"{{ product.quote }}"</p>
-                <p class="text-gray-600">Created Date: {{ product.created_at }}</p>
-                <p class="text-gray-600">Updated at: {{ product.updated_at }}</p>
-                {% if product.cited_quote.count > 0 %}
-                <ul>
-                    <li class="text-cyan-600 font-semibold">Cited by {{ product.cited_quote.count }} User:</li>
-                    {% for quoted_quote in product.cited_quote.all %}
-                        <li class="text-orange-700">🙈 {{ quoted_quote.user_id.username }}</li>
-                    {% endfor %}
-                </ul>
+        <div class="max-w-sm bg-orange-100 rounded-lg shadow-lg p-4 mb-4">
+            <h5 class="text-xl font-bold text-center">{{ product.user.username }}</h5>
+            <p class="text-gray-600 font-bold text-center">"{{ product.quote }}"</p>
+            <p class="text-gray-600">Created Date: {{ product.created_at }}</p>
+            <p class="text-gray-600">Updated at: {{ product.updated_at }}</p>
+            {% if product.cited_quote.count > 0 %}
+            <ul>
+                <li class="text-cyan-600 font-semibold">Cited by {{ product.cited_quote.count }} User:</li>
+                {% for quoted_quote in product.cited_quote.all %}
+                <li class="text-orange-700">🙈 {{ quoted_quote.user_id.username }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+            <div class="mt-2 flex justify-center">
+                {% if product.user == user %}
+                <a href="{% url 'edit-quote' product.pk %}">
+                    <button class="bg-red-500 text-white text-sm py-2 px-4 rounded mr-2">Edit Quote</button>
+                </a>
+                <form method="post" action="{% url 'delete-quote' product.id %}">
+                    {% csrf_token %}
+                    <button type="submit" class="bg-pink-500 text-white text-sm py-2 px-4 rounded ml-2">Delete
+                        Quote</button>
+                </form>
                 {% endif %}
-                <div class="mt-2 flex justify-center">
-                    {% if product.user == user %}
-                    <a href="{% url 'edit-quote' product.pk %}">
-                        <button class="bg-red-500 text-white text-sm py-2 px-4 rounded mr-2">Edit Quote</button>
-                    </a>
-                    <form method="post" action="{% url 'delete-quote' product.id %}">
-                        {% csrf_token %}
-                        <button type="submit" class="bg-pink-500 text-white text-sm py-2 px-4 rounded ml-2">Delete Quote</button>
-                    </form>
-                    {% endif %}
-                    <form method="post" action="{% url 'cited-quote' product.pk %}">
-                        {% csrf_token %}
-                        <button type="submit" class="bg-yellow-500 text-white text-sm py-2 px-4 rounded ml-2">Cited Quote</button>
-                    </form>
-                </div>
+                <form method="post" action="{% url 'cited-quote' product.pk %}">
+                    {% csrf_token %}
+                    <button type="submit" class="bg-yellow-500 text-white text-sm py-2 px-4 rounded ml-2">Cited
+                        Quote</button>
+                </form>
             </div>
-        {% endfor %}
-    </div> 
-</div>    
-    
-    <!-- bikin button dibawah ceritanya -->        
-    <div class="fixed bottom-0 left-0 right-0 flex flex-col items-center p-4">
-        <div class="mb-2">
-            <h5 class="font-bold">Terdapat {{quotes_count}} Quotes dalam Profilemu!</h5>
         </div>
-        <a href="{% url 'create-quotes' %}" class="w-1/4 h-10 bg-orange-100 rounded-[40px] text-m border border-1 font-['Lato'] hover:text-red-800 hover:border-red-800" style="display: flex; justify-content: center; align-items: center;">
-            Kutip quotes favoritmu
-        </a>        
+        {% endfor %}
     </div>
+</div>
 
-    <!-- JavaScript buat bisa search quotes -->
-    <script>
-        const searchInput = document.getElementById('search');
-        const quoteCards = document.querySelectorAll('.bg-orange-100');
-    
-        searchInput.addEventListener('input', function () {
-            const searchValue = searchInput.value.toLowerCase();
-    
-            // permintaan AJAX ke server
-            fetch(`/search-quotes/?search_value=${searchValue}`)
-                .then(response => response.json())
-                .then(data => {
-                    const searchResults = data.search_results;
-    
-                    quoteCards.forEach(card => {
-                        const cardTitle = card.querySelector('.text-xl').textContent.toLowerCase();
-                        const cardQuote = card.querySelector('.text-gray-600.font-bold').textContent.toLowerCase();
-    
-                        // cek apakah kartu harus ditampilkan
-                        const shouldDisplay = searchResults.some(result => 
-                            cardTitle.includes(result.quote) || cardQuote.includes(result.quote)
-                        );
-    
-                        card.style.display = shouldDisplay ? 'block' : 'none';
-                    });
-                })
-                .catch(error => {
-                    console.error('Error:', error);
+<!-- bikin button dibawah ceritanya -->
+<div class="fixed bottom-0 left-0 right-0 flex flex-col items-center p-4">
+    <div class="mb-2">
+        <h5 class="font-bold">Terdapat {{quotes_count}} Quotes dalam Profilemu!</h5>
+    </div>
+    <a href="{% url 'create-quotes' %}"
+        class="w-fit px-10 h-10 bg-orange-100 rounded-[40px] text-m border border-1 font-['Lato'] hover:text-red-800 hover:border-red-800"
+        style="display: flex; justify-content: center; align-items: center;">
+        Kutip quotes favoritmu
+    </a>
+</div>
+
+<!-- JavaScript buat bisa search quotes -->
+<script>
+    const searchInput = document.getElementById('search');
+    const quoteCards = document.querySelectorAll('.bg-orange-100');
+
+    searchInput.addEventListener('input', function () {
+        const searchValue = searchInput.value.toLowerCase();
+
+        // permintaan AJAX ke server
+        fetch("{% url 'search-quotes' %}")
+            .then(response => response.json())
+            .then(data => {
+                const searchResults = data.search_results;
+
+                quoteCards.forEach(card => {
+                    const cardTitle = card.querySelector('.text-xl').textContent.toLowerCase();
+                    const cardQuote = card.querySelector('.text-gray-600.font-bold').textContent.toLowerCase();
+
+                    // cek apakah kartu harus ditampilkan
+                    const shouldDisplay = searchResults.some(result =>
+                        cardTitle.includes(result.quote) || cardQuote.includes(result.quote)
+                    );
+
+                    card.style.display = shouldDisplay ? 'block' : 'none';
                 });
-        });
-    </script>    
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+    });
+</script>
 
 </div>
 {% endblock content %}
